# formal-languages-2023

./: README.md
earley-algorithm/: README.md  main.cpp  script.sh
earley-algorithm/earley/: earley.cpp  earley.h
eps-transitions/: README.md  eps-transition.cpp  eps-transitions.h
from-NFA-to-DFA/: README.md  from-NFA-to-DFA.cpp
from-regular-to-NFA/: CMakeLists.txt  MatchRegular.cpp  NFA.h  ParseRegular.cpp  README.md  functions.h  main.cpp  parse-regular.cpp  run_tests.sh  solution.sh
from-regular-to-NFA/CMakeModules/: CodeCoverage.cmake
from-regular-to-NFA/Functions/: Functions.h  MatchRegular.cpp  ParseRegular.cpp
from-regular-to-NFA/NFA/: NFA.cpp  NFA.h
from-regular-to-NFA/tests/: MatchRegularTest.cpp  ParseRegularTest.cpp
